<resources>
    <string name="app_name">Covid-19 Measure</string>

    <string name="navigation_drawer_open">Open the navigation drawer</string>
    <string name="navigation_drawer_close">Close the navigation drawer</string>

    <string name="statistics">Statistics</string>
    <string name="map_view">Map View</string>
    <string name="settings">Settings</string>
    <string name="default_stats">Reset default</string>
    <string name="languages">Change Language</string>

    <string name="application">Corona Measure</string>
    <string name="application_info">Covid-19 Stats Updates</string>

    <string name="list_search">Search for State/Country!</string>

    <string name="db_update">Updating Data</string>
    <string name="change_language">Change Language</string>

    <string name="map_open">Opening Map</string>
    <string name="map_ready">Map is Ready</string>

    <string name="stat_remove">Removing Corona Statistics of</string>
    <string name="stats_list_restore">Restoring List of Data</string>
    <string name="language_settings">Language Settings</string>

    <string name="delete_all">Delete all Stats</string>
    <string name="all_stats_removed">All Statistics Removed</string>
    
    <string name="infected">Infected: \</string>
    <string name="deaths">Deaths: \</string>

    <string name="maps_search">Enter Address, City or Zip Code</string>

    <string name="total_cases">Total Cases: \</string>
    <string name="recovered">Recovered: \</string>
    <string name="active_cases">Active Cases: \</string>
    <string name="source">Source: \</string>

</resources>
